# premiena

./: .gitignore  Cargo.toml  README.md  demo.yaml  demo_jp.yaml  demo_jqf.yaml  demo_pxfk.yaml  demo_slavic.yaml  test.txt
src/: alphabet.rs  automaton.rs  lib.rs  rewrite.rs  table.rs
src/automaton/: table.rs
src/rewrite/: helpers.rs
