[package]
name = "premiena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genawaiter = "0.99.1"
im = "15.1.0"
itertools = "0.10.3"
smallvec = "1.8.0"
tap = "1.0.1"
log = "0.4.14"
smol_str = "0.1.18"
serde_json = "1.0.66"
regex-syntax = "0.6.26"
rustc-hash = "1.1.0"

[profile.dev]
opt-level=1

[profile.release-dbg]
inherits = "release"
debug=2
