[package]
name = "premiena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genawaiter = "0.99.1"
im = "15.1.0"
itertools = "0.10.3"
smallvec = "1.8.0"
tap = "1.0.1"
log = "0.4.14"
smol_str = "0.1.18"
serde_json = "1.0.66"
regex-syntax = "0.6.26"
rustc-hash = "1.1.0"
anyhow = "1.0.57"
rayon = "1.5.3"
hex = "0.4.3"
once_cell = "1.12.0"
env_logger = "0.9.0"
argh = "0.1.5"
linked-hash-map = {version="0.5.4", features=["serde"]}

serde={version="1", features=["derive"]}
serde_yaml = "0.8.17"
yaml-rust = "0.4.5"
indexmap = {version="1.7.0", features=["serde"]}
shellexpand = "2.1.0"
thiserror = "1.0.26"
ahash = "0.8.6"
scopeguard = "1.2.0"
either = "1.9.0"

[profile.dev]
opt-level=1

[profile.release-dbg]
inherits = "release"
debug=2
